--- a/index.html
+++ b/index.html
@@ -6,19 +6,41 @@
 	<title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-	<div class="Jumbotron">
 	<div class="container">
-	<button id="button1">Button 1</button>
-	<button id="button2">Button 2</button>
-	<button id="button3">Button 3</button>
-	<button id="button4">Button 4</button>
-	<button id="button5">Button 5</button>
-	<button id="surprises">Surprises</button>
-	<button id="playback">Playback</button>
-	<button id="reset">Reset</button>
+	<div class="jumbotron" align="center">
+		<h1 class="font-italic">Let's play the game of See N' Say storyteller!</h1><br>
+	<div><img src="SeeN'Say.png" alt="See N' Say image" usemap="#gamemap" width="800" height="500"/>
+		<map name="gamemap">
+				<area shape="circle" coords="481,82,20" alt="nouns" id="button1">
+				<area shape="circle" coords="545,82,20" alt="verbs" id="button2">
+				<area shape="circle" coords="605,82,20" alt="adjectives" id="button3">
+				<area shape="circle" coords="665,82,20" alt="nouns" id="button4">
+				<area shape="circle" coords="723,82,20" alt="places" id="button5">
+				<area shape="circle" coords="667,392,20" alt="suprises" id="surprises">
+				<area shape="circle" coords="738,403,20" alt="playback" id="playback">
+				<area shape="circle" coords="740,330,20" alt="reset" id="reset">
+		</map>
+	</div>
+	<br><br>
+	<h3><a href="#cheatSheet">Cheat Sheet</a></h3><br>
+	<p id="cheatSheet" align="left">
+		<ul>
+			<li>To use the See N' Say storyteller, 
+				kindly tap on the buttons on the right side of the book.</li>
+			<li>Different Buttons triggers a Different set of series on the left side of the book.</li>
+			<li>As, Use Purple Button for Nouns, Blue for Verbs, Green for Adjectives, Orange for Nouns and Pink for Places.</li>
+			<li>Use the 'Surprises' button (Red) for a random surprise.</li>
+			<li>Use the 'Playback' button (Ocean-green) for the last repeated sentence.</li>
+			<li>Use the 'Reset' button (Brown) to empty the playback and start from the New! </li>
+		</ul>
+	</p>
 	</div></div>
 	<script src="js/app.js"></script>
 </body>
