--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 	<div class="jumbotron" align="center">
 		<h1 class="font-italic">Let's play the game of See N' Say storyteller!</h1><br>
-	<div><img src="SeeN'Say.png" alt="See N' Say image" usemap="#gamemap" width="800" height="500"/>
+	<div><img src="http://aws.computerstudi.es/~gc200395812/Javascript%20(Sem%203)/SeeN'Say.PNG" alt="See N' Say image" usemap="#gamemap" width="800" height="500"/>
 		<map name="gamemap">
 				<area shape="circle" coords="481,82,20" alt="nouns" id="button1">
 				<area shape="circle" coords="545,82,20" alt="verbs" id="button2">
